successfully integrate SMS auto read and update to database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Expensify</string>
     <string name="hdfc_sms">HDFC Bank: Rs 60.00 debited from a/c **5590 on 22-04-23 to VPA Q414431420@ybl(UPI Ref No 347818534230). Not you? Call on 18002586161 to report</string>
+    <string name="default_web_client_id">748559585460-j6ss7g0rsno1ot2j320dve3c98td3ltj.apps.googleusercontent.com</string>
 </resources>
